--- a/contract/tsconfig.json
+++ b/contract/tsconfig.json
@@ -1,10 +1,25 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
+    "lib": ["es2015", "esnext", "dom"],
+    "module": "esnext",
+    "target": "es2020",
+    "moduleResolution": "node",
+    "alwaysStrict": true,
+    "outDir": "./lib",
+    "declaration": true,
+    "preserveSymlinks": true,
+    "preserveWatchOutput": true,
+    "pretty": false,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "experimentalDecorators": true,
-    "target": "es5",
-    "noEmit": true
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "skipLibCheck": true
   },
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"]
 }
